--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
   </div>
 
-
+  <script type="text/javascript" src="game.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
